# igusharray

./: .gitignore  Cargo.toml  Readme.md  rust-toolchain.toml
.github/workflows/: msrv.yml
src/: igusharray.rs  lib.rs
